# IssueCraft

./: .gitignore  Cargo.toml  README.md  mise.toml  test.sh
.github/workflows/: rust.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/iql-parser/: Cargo.toml  README.md
crates/iql-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs
crates/iql-parser/src/snapshots/: issuecraft_ql__lexer__tests__all_logical_operators.snap  issuecraft_ql__lexer__tests__complete_create_statement.snap  issuecraft_ql__lexer__tests__empty_string.snap  issuecraft_ql__lexer__tests__hyphenated_identifier.snap  issuecraft_ql__lexer__tests__issue_id_format.snap  issuecraft_ql__lexer__tests__string_with_spaces.snap  issuecraft_ql__lexer__tests__tokenize_boolean.snap  issuecraft_ql__lexer__tests__tokenize_case_insensitive.snap  issuecraft_ql__lexer__tests__tokenize_entity_types.snap  issuecraft_ql__lexer__tests__tokenize_escaped_quotes.snap  issuecraft_ql__lexer__tests__tokenize_escaped_string.snap  issuecraft_ql__lexer__tests__tokenize_field_names.snap  issuecraft_ql__lexer__tests__tokenize_float.snap  issuecraft_ql__lexer__tests__tokenize_identifier.snap  issuecraft_ql__lexer__tests__tokenize_keywords.snap  issuecraft_ql__lexer__tests__tokenize_number.snap  issuecraft_ql__lexer__tests__tokenize_operators.snap  issuecraft_ql__lexer__tests__tokenize_priority_levels.snap  issuecraft_ql__lexer__tests__tokenize_punctuation.snap  issuecraft_ql__lexer__tests__tokenize_string_double_quotes.snap  issuecraft_ql__lexer__tests__tokenize_with_newlines.snap  issuecraft_ql__parser__tests__parse_assign.snap  issuecraft_ql__parser__tests__parse_close.snap  issuecraft_ql__parser__tests__parse_comment.snap  issuecraft_ql__parser__tests__parse_create_issue.snap  issuecraft_ql__parser__tests__parse_create_user_simple.snap  issuecraft_ql__parser__tests__parse_create_user_with_details.snap  issuecraft_ql__parser__tests__parse_issue_id_project.snap  issuecraft_ql__parser__tests__parse_select_all.snap  issuecraft_ql__parser__tests__parse_select_columns.snap  issuecraft_ql__parser__tests__parse_select_complex_filter.snap  issuecraft_ql__parser__tests__parse_select_with_filter.snap  issuecraft_ql__parser__tests__parse_update_issue.snap  issuecraft_ql__tests__all_comparison_ops_with_strings.snap  issuecraft_ql__tests__all_delete_targets-2.snap  issuecraft_ql__tests__all_delete_targets-3.snap  issuecraft_ql__tests__all_delete_targets-4.snap  issuecraft_ql__tests__all_delete_targets.snap  issuecraft_ql__tests__all_field_keywords_in_create.snap  issuecraft_ql__tests__all_update_targets-2.snap  (+83 more)
crates/sdk/: Cargo.toml
crates/storage/redb/: Cargo.toml
crates/storage/redb/src/: lib.rs
scripts/: demo.tape  make_demo.sh  test.sh
src/: cli.rs  config.rs  local.rs  main.rs
tests/: query.rs
tests/features/: query.feature
