[package]
name = "issuecraft"
version.workspace = true
edition.workspace = true

[features]
default = ["full"]
full = ["mysql", "postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
] }
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"

async-trait.workspace = true
facet.workspace = true
facet-pretty.workspace = true
facet-json.workspace = true
facet-toml.workspace = true
facet-kdl.workspace = true
facet-value.workspace = true

issuecraft-core.workspace = true
issuecraft-sdk.workspace = true
issuecraft-common.workspace = true
issuecraft-ql.workspace = true

redb = "3.1.0"

[workspace]
resolver = "3"
members = ["crates/core", "crates/sdk", "crates/common", "crates/iql-parser"]
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.17"
facet = { version = "0.42.0", features = ["time"] }
facet-pretty = "0.42.0"
facet-json = "0.42.0"
facet-toml = "0.42.0"
facet-kdl = "0.42.0"
facet-value = "0.42.0"
async-trait = "0.1.89"
issuecraft-core = { version = "0.1.0", path = "crates/core" }
issuecraft-sdk = { version = "0.1.0", path = "crates/sdk" }
issuecraft-common = { version = "0.1.0", path = "crates/common" }
issuecraft-ql = { version = "0.1.0", path = "crates/iql-parser" }
time = "0.3.44"
regex = "1.10"
