[package]
name = "issuecraft-core"
description = "The core library for IssueCraft, providing essential types and traits"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
issuecraft-ql.workspace = true
thiserror.workspace = true
facet.workspace = true
facet-json.workspace = true
async-trait.workspace = true
time.workspace = true
