[package]
name = "issuecraft-ql"
description = "The IssueCraft Query Language parser, AST definitions and helpers"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
logos = "0.16"
thiserror.workspace = true
facet-value.workspace = true
regex.workspace = true
