[package]
name = "issuecraft-redb"
description = "Redb storage backend for IssueCraft"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
time.workspace = true

facet.workspace = true
facet-value.workspace = true
facet-json.workspace = true

issuecraft-core.workspace = true
issuecraft-ql.workspace = true

nanoid.workspace = true

redb = "3.1.0"
